--- a/package.json
+++ b/package.json
@@ -8,10 +8,22 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@mdi/font": "^7.3.67",
+    "@mdi/js": "^7.3.67",
+    "@vueuse/core": "^10.7.0",
+    "@vueuse/integrations": "^10.7.0",
+    "chart.js": "^4.4.5",
     "core-js": "^3.8.3",
+    "dayjs": "^1.11.10",
+    "jwt-decode": "^4.0.0",
+    "pinia": "^2.1.7",
+    "pinia-plugin-persistedstate": "^3.2.1",
+    "universal-cookie": "^6",
     "vue": "^3.2.13",
-    "vue-class-component": "^8.0.0-0",
-    "vue-router": "^4.0.3"
+    "vue-chartjs": "^5.3.1",
+    "vue-router": "^4.0.3",
+    "vuejs3-datepicker": "^1.1.2",
+    "vuetify": "^3.4.6"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.4.0",
@@ -22,11 +34,11 @@
     "@vue/cli-plugin-typescript": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "@vue/eslint-config-typescript": "^9.1.0",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
+    "eslint": "8.52.0",
     "eslint-plugin-vue": "^8.0.3",
-    "prettier": "^2.4.1",
-    "typescript": "~4.5.5"
+    "prettier": "3.1.0",
+    "prettier-eslint": "16.1.2",
+    "typescript": "~4.5.5",
+    "vue-eslint-parser": "8.0.0"
   }
 }
