--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mdi/js": "^7.3.67",
     "@vueuse/core": "^10.7.0",
     "@vueuse/integrations": "^10.7.0",
+    "axios": "^1.7.7",
     "chart.js": "^4.4.5",
     "core-js": "^3.8.3",
     "dayjs": "^1.11.10",
