--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -8,9 +8,6 @@ on:
 jobs:
   pre-build:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        environment: [test, preprod, prod]
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -20,29 +17,8 @@ jobs:
           chmod +x ./scripts/setAWSEnvironment.sh
           ./scripts/setAWSEnvironment.sh
 
-      - name: Fetch CLIENT_ID from SSM
-        id: fetch_client_id
-        run: |
-          if [[ "${{ matrix.environment }}" == "test" ]]; then
-            SSM_VAL=$(aws ssm get-parameter --name "/dcapps/etl/test/ns/auth/client/key" --with-decryption --query "Parameter.Value" --output text --profile wickes-sls-preprod --region eu-west-1)
-          elif [[ "${{ matrix.environment }}" == "preprod" ]]; then
-            SSM_VAL=$(aws ssm get-parameter --name "/dcapps/etl/preprod/ns/auth/client/key" --with-decryption --query "Parameter.Value" --output text --profile wickes-sls-preprod --region eu-west-1)
-          fi
-          echo "Fetched CLIENT_ID from SSM = $SSM_VAL"
-          echo "VUE_APP_AUTH_CLIENT_ID=$SSM_VAL" > .env
-
-      - name: Upload .env file
-        uses: actions/upload-artifact@v4
-        with:
-          name: .env
-          path: .env
-
   build:
     runs-on: ubuntu-latest
-    needs: pre-build
-    strategy:
-      matrix:
-        environment: [test, preprod, prod]
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -56,9 +32,11 @@ jobs:
         run: |
           chmod +x ./scripts/setAWSEnvironment.sh
           ./scripts/setAWSEnvironment.sh
-          if [[ "${{ matrix.environment }}" == "test" ]]; then
+          if [[ "${{ github.ref_name }}" == "test" ]]; then
             yarn build:test
-          elif [[ "${{ matrix.environment }}" == "preprod" ]]; then
+          if [[ "${{ github.ref_name }}" == "main" ]]; then
+            yarn build
+          elif [[ "${{ github.ref_name }}" == "preprod" ]]; then
             yarn build:preprod
           fi
 
@@ -71,9 +49,6 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    strategy:
-      matrix:
-        environment: [test, preprod, prod]
     steps:
       - name: checkout code
         run: echo 'Deployment'
@@ -87,10 +62,10 @@ jobs:
 
       # - name: Deploy
       #   run: |
-      #     if [[ "${{ matrix.environment }}" == "test" ]]; then
+      #     if [[ "${{ github.ref_name }}" == "test" ]]; then
       #       yarn deploy:test
-      #     elif [[ "${{ matrix.environment }}" == "preprod" ]]; then
+      #     elif [[ "${{ github.ref_name }}" == "preprod" ]]; then
       #       yarn deploy:preprod
-      #     elif [[ "${{ matrix.environment }}" == "prod" ]]; then
+      #     elif [[ "${{ github.ref_name }}" == "prod" ]]; then
       #       yarn deploy:prod
       #     fi
